--- a/Spark/Spark Tune/4-shuffle调优.ipynb
+++ b/Spark/Spark Tune/4-shuffle调优.ipynb
@@ -13,18 +13,26 @@
    "source": [
     "### $\\S$1. Hash Shuffle\n",
     "#### 一. 普通hash shuffle\n",
-    "1. shuffle write\n",
-    "    * 每个task都会产生大量shuffle文件, 文件个数为下个stage的task数量(下个stage的partition个数 * 每个分区的task数(线程数))  \n",
-    "    * 比如下一个stage总共有100个task，那么当前stage的每个task都要创建100份磁盘文件。如果当前stage有50个task，总共有10个Executor，每个Executor执行5个Task，那么每个Executor上总共就要创建500个磁盘文件，所有Executor上会创建5000个磁盘文件。由此可见，普通的hash shuffle write操作所产生的磁盘文件的数量是极其惊人的。\n",
+    "这里我们先明确一个假设前提：每个Executor只有1个CPU core，也就是说，无论这个Executor上分配多少个task线程，同一时间都只能执行一个task线程。\n",
     "\n",
-    "2. shuffle read\n",
-    "    * shuffle read通常是一个stage刚开始要做的事情. 此时, 每个task都需要拉取上一个stage输出结果中相同的key的记录, 然后根据key进行聚合,连接等操作. 因此每个task都要到上一个stage的所有task所在节点上, 拉取属于自己的文件\n",
-    "    * shuffle read是边拉取边聚合. 因此, 需要read缓冲区, 每次只拉取与缓冲区相同大小的数据, 然后再内存中聚合, 而后再次拉取数据, 直到所有数据拉取完毕, 得到最终结果\n",
+    "　　我们先从shuffle write开始说起。shuffle write阶段，主要就是在一个stage结束计算之后，为了下一个stage可以执行shuffle类的算子（比如reduceByKey），而将每个task处理的数据按key进行“分类”。所谓“分类”，就是对相同的key执行hash算法，从而将相同key都写入同一个磁盘文件中，而每一个磁盘文件都只属于下游stage的一个task。在将数据写入磁盘之前，会先将数据写入内存缓冲中，当内存缓冲填满之后，才会溢写到磁盘文件中去。\n",
+    "\n",
+    "　　那么每个执行shuffle write的task，要为下一个stage创建多少个磁盘文件呢？很简单，下一个stage的task有多少个，当前stage的每个task就要创建多少份磁盘文件。比如下一个stage总共有100个task，那么当前stage的每个task都要创建100份磁盘文件。如果当前stage有50个task，总共有10个Executor，每个Executor执行5个Task，那么每个Executor上总共就要创建500个磁盘文件，所有Executor上会创建5000个磁盘文件。由此可见，未经优化的shuffle write操作所产生的磁盘文件的数量是极其惊人的。\n",
+    "\n",
+    "**该stage的每个task都创建下个stage task个数的文件**　　接着我们来说说shuffle read。shuffle read，通常就是一个stage刚开始时要做的事情。此时该stage的每一个task就需要将上一个stage的计算结果中的所有相同key，从各个节点上通过网络都拉取到自己所在的节点上，然后进行key的聚合或连接等操作。由于shuffle write的过程中，task给下游stage的每个task都创建了一个磁盘文件，因此shuffle read的过程中，每个task只要从上游stage的所有task所在节点上，拉取属于自己的那一个磁盘文件即可。\n",
+    "\n",
+    "　　shuffle read的拉取过程是一边拉取一边进行聚合的。每个shuffle read task都会有一个自己的buffer缓冲，每次都只能拉取与buffer缓冲相同大小的数据，然后通过内存中的一个Map进行聚合等操作。聚合完一批数据后，再拉取下一批数据，并放到buffer缓冲中进行聚合操作。以此类推，直到最后将所有数据到拉取完，并得到最终的结果。\n",
     "    \n",
-    "#### 二. 开启consolidate的hash shuffle\n",
-    "1. shuffle write\n",
-    "    * 开启consolidate后, 不再是每个task产生为下个stage的task产生各自的文件, 而是同个cpu为下个stage的task产生各自的文件,让同一个cpu处理的不同task服用同一批磁盘文件\n",
-    "    * 假设第二个stage有100个task，第一个stage有50个task，总共还是有10个Executor，每个Executor执行5个task。那么原本使用未经优化的HashShuffleManager时，每个Executor会产生500个磁盘文件，所有Executor会产生5000个磁盘文件的。但是此时经过优化之后，每个Executor创建的磁盘文件的数量的计算公式为：CPU core的数量 * 下一个stage的task数量。也就是说，假设有4个core, 每个Executor此时只会创建400个磁盘文件，所有Executor只会创建4000个磁盘文件。"
+    "#### 二. 开启优化(consolidate)的hash shuffle\n",
+    "　　这里说的优化，是指我们可以设置一个参数，spark.shuffle.consolidateFiles。该参数默认值为false，将其设置为true即可开启优化机制。通常来说，如果我们使用HashShuffleManager，那么都建议开启这个选项。\n",
+    "\n",
+    "　　开启consolidate机制之后，在shuffle write过程中，task就不是为下游stage的每个task创建一个磁盘文件了。此时会出现shuffleFileGroup的概念，每个shuffleFileGroup会对应一批磁盘文件，磁盘文件的数量与下游stage的task数量是相同的。一个Executor上有多少个CPU core，就可以并行执行多少个task。而第一批并行执行的每个task都会创建一个shuffleFileGroup，并将数据写入对应的磁盘文件内。\n",
+    "  \n",
+    "　　当Executor的CPU core执行完一批task，接着执行下一批task时，下一批task就会复用之前已有的shuffleFileGroup，包括其中的磁盘文件。也就是说，此时task会将数据写入已有的磁盘文件中，而不会写入新的磁盘文件中。因此，consolidate机制允许不同的task复用同一批磁盘文件，这样就可以有效将多个task的磁盘文件进行一定程度上的合并，从而大幅度减少磁盘文件的数量，进而提升shuffle write的性能。\n",
+    "\n",
+    "**每个Executor创建下个stage task个数的文件**\n",
+    "　　假设第二个stage有100个task，第一个stage有50个task，总共还是有10个Executor，每个Executor执行5个task。那么原本使用未经优化的HashShuffleManager时，每个Executor会产生500个磁盘文件，所有Executor会产生5000个磁盘文件的。但是此时经过优化之后，每个Executor创建的磁盘文件的数量的计算公式为：CPU core的数量 * 下一个stage的task数量。也就是说，每个Executor此时只会创建100个磁盘文件，所有Executor只会创建1000个磁盘文件。\n",
+    "    "
    ]
   },
   {
@@ -33,22 +41,35 @@
    "source": [
     "### $\\S$2. Sort Shuffle\n",
     "#### 一. 普通sortshuffle\n",
-    "1. shuffle write (每个task最终只产生一个排序文件, 不算缓冲溢写的文件)\n",
-    "    * 该模式下, 当前stage的每个task会持有一个map缓冲区, 当缓冲区满后, 将数据排序然后溢写到磁盘上. 最后把这些溢写文件merge成一个大文件, 为了便于下个stage的task拉取数据, 还会配套一个索引文件, 记录下游每个task拉取数据的start offset和end offset\n",
-    "    * sort shuffle模式下, 每个map task输出一个文件和一个索引文件\n",
-    "    * 溢写机制可以使到达缓冲区大小, 也可以是记录数达到一定规模, 默认10000条\n",
-    "    * 根据不同的shuffle算子，可能选用不同的数据结构。如果是reduceByKey这种聚合类的shuffle算子，那么会选用Map数据结构，一边通过Map进行聚合，一边写入内存；如果是join这种普通的shuffle算子，那么会选用Array数据结构\n",
-    "    * 比如第一个stage有50个task，总共有10个Executor，每个Executor执行5个task，而第二个stage有100个task。由于每个task最终只有一个磁盘文件，因此此时每个Executor上只有5个磁盘文件，所有Executor只有50个磁盘文件。\n",
+    "SortShuffleManager的运行机制主要分成两种:\n",
+    "* 一种是普通运行机制\n",
+    "* 另一种是bypass运行机制。  \n",
+    "  当shuffle read task的数量小于等于spark.shuffle.sort.bypassMergeThreshold参数的值时（默认为200），就会启用bypass机制。\n",
+    "\n",
+    "普通运行机制 : \n",
+    "　　数据会先写入一个内存数据结构中，此时根据不同的shuffle算子，可能选用不同的数据结.\n",
+    "* 如果是reduceByKey这种聚合类的shuffle算子，那么会选用Map数据结构，一边通过Map进行聚合，一边写入内存；\n",
+    "* 如果是join这种普通的shuffle算子，那么会选用Array数据结构，直接写入内存。 \n",
+    "\n",
+    "接着，每写一条数据进入内存数据结构之后，就会判断一下，是否达到了某个临界阈值。如果达到临界阈值的话，那么就会尝试将内存数据结构中的数据溢写到磁盘，然后清空内存数据结构。\n",
+    "\n",
+    "　　在溢写到磁盘文件之前，会先根据key对内存数据结构中已有的数据进行排序。排序过后，会分批将数据写入磁盘文件。默认的batch数量是10000条，也就是说，排序好的数据，会以每批1万条数据的形式分批写入磁盘文件。写入磁盘文件是通过Java的BufferedOutputStream实现的。BufferedOutputStream是Java的缓冲输出流，首先会将数据缓冲在内存中，当内存缓冲满溢之后再一次写入磁盘文件中，这样可以减少磁盘IO次数，提升性能。\n",
+    "\n",
+    "　　一个task将所有数据写入内存数据结构的过程中，会发生多次磁盘溢写操作，也就会产生多个临时文件。最后会将之前所有的临时磁盘文件都进行合并，这就是merge过程，此时会将之前所有临时磁盘文件中的数据读取出来，然后依次写入最终的磁盘文件之中。此外，由于一个task就只对应一个磁盘文件，也就意味着该task为下游stage的task准备的数据都在这一个文件中，因此还会单独写一份索引文件，其中标识了下游各个task的数据在文件中的start offset与end offset。\n",
+    "\n",
+    "**该stage中的每个task产生一个文件**\n",
+    "SortShuffleManager由于有一个磁盘文件merge的过程，因此大大减少了文件数量。比如第一个stage有50个task，总共有10个Executor，每个Executor执行5个task，而第二个stage有100个task。由于每个task最终只有一个磁盘文件，因此此时每个Executor上只有5个磁盘文件，所有Executor只有50个磁盘文件。\n",
     "    \n",
     "#### 二. bypass Sort Shuffle\n",
-    "1. shuffle write\n",
-    "    * bypass和普通hash shuffle一样, 每个task会产生于下个stage task数量相同的临时文件, 也是使用hash值将记录写到不同的临时文件中.  \n",
-    "     不同的是, bypass最后会将这些临时文件merge成一个文件, 保证每个map task最终产生一个文件, 减小shuffle read的时间\n",
-    "    * bypass根据key的hash值溢写的方式, 也是先写到内存缓冲区, 再写到对应文件\n",
-    "    * 该机制与普通SortShuffleManager运行机制的不同在于：\n",
-    "        * 第一，磁盘写机制不同；\n",
-    "        * 第二，不会进行排序。  \n",
-    "也就是说，启用该机制的最大好处在于，shuffle write过程中，不需要进行数据的排序操作，也就节省掉了这部分的性能开销。"
+    "bypass运行机制的触发条件如下：\n",
+    "* shuffle map task数量小于spark.shuffle.sort.bypassMergeThreshold参数的值。\n",
+    "* 不是聚合类的shuffle算子（比如reduceByKey）。\n",
+    "\n",
+    "　　此时task会为每个下游task都创建一个临时磁盘文件，并将数据按key进行hash然后根据key的hash值，将key写入对应的磁盘文件之中。当然，写入磁盘文件时也是先写入内存缓冲，缓冲写满之后再溢写到磁盘文件的。最后，同样会将所有临时磁盘文件都合并成一个磁盘文件(每个executor只写出一个文件)，并创建一个单独的索引文件。\n",
+    "\n",
+    "　　该过程的磁盘写机制其实跟未经优化的HashShuffleManager是一模一样的，因为都要创建数量惊人的磁盘文件，只是在最后会做一个磁盘文件的合并而已。因此少量的最终磁盘文件，也让该机制相对未经优化的HashShuffleManager来说，shuffle read的性能会更好。\n",
+    "\n",
+    "　　而该机制与普通SortShuffleManager运行机制的不同在于：第一，磁盘写机制不同；第二，不会进行排序。也就是说，启用该机制的最大好处在于，shuffle write过程中，不需要进行数据的排序操作，也就节省掉了这部分的性能开销。"
    ]
   },
   {
