--- a/计算机网络/图解TCP/6.1-TCP.ipynb
+++ b/计算机网络/图解TCP/6.1-TCP.ipynb
@@ -100,7 +100,18 @@
     "* 延迟ACK应答   \n",
     "因为TCP采用滑动窗口机制, 因此某几个ACK确认的丢失并不会造成这几个段的重传, 因此可以从接收方哪里减少ACK的发送, 只对当前正确收到的最大数据报序号做应答. 这样做的另一个好处是: 如果收到1个数据报就立刻应答, 由于接收方还没来的急处理数据, 返回的ACK中控制流量的窗口就会很小, 从而降低通信效率. 因此, 接收方往往采用延迟应答的机制 :  \n",
     "    * 收到2个数据报后再返回ACK应答\n",
-    "    * 其他情况下, 延迟0.5秒发送ACK应答"
+    "    * 其他情况下, 延迟0.2秒发送ACK应答\n",
+    "    \n",
+    "    \n",
+    "* Nagle算法   \n",
+    "Nagle算法是一种发送方延迟发送数据报的策略. 它仅当下列2个条件至少有一个满足的情况下才能发送数据报:\n",
+    "    * 已发送的数据报已经全部收到ACK\n",
+    "    * 数据报达到最大可发送长度MSS\n",
+    "    \n",
+    "  Nagle的本意是提高网络利用率, 因为当数据很小时就被组成数据报发送的话, tcp头部所占的字节比例太高, 降低通信效率; 但如果接收方开启了延迟ACK应答的话, 由于ACK的延迟, 使得数据报小于MSS时, Nagle要等待全部ACK到达后再发送数据报, 使得发送延迟进一步增大. 因此, 对于低延迟的要求, 往往要关闭Nagle(例如:Xwindow). \n",
+    "```java\n",
+    "java.net.Socket.setTcpNoDelay(True)  // java中使用这个API关闭Nagle算法\n",
+    "```\n"
    ]
   }
  ],
