--- a/Java NetWork/2.4-Selector.ipynb
+++ b/Java NetWork/2.4-Selector.ipynb
@@ -102,7 +102,7 @@
     "    }\n",
     "    ```\n",
     "    * 该集合是一个Set<SelectionKey\\>, 可通过集合中每个Key的事件类型选择不同操作\n",
-    "    * 为不断获取准备好的SeletionKeys集合,`selectedKeys()`要写在循环里, 而处理过的SelectionKey不会自动删除, 为避免下次循环获得重复的SelectionKey, 所以应该在迭代的最后手动删除处理过的Key\n",
+    "    * 为不断获取准备好的SeletionKeys集合,`selectedKeys()`要写在循环里。避免selectedKeys无限制的增加，因此循环内需要删除处理过的key对象  \n",
     "5. `wakeUp()`  \n",
     "当一个线程调用selector.select()后会一直阻塞, 但如果另一个线程调用了该selector对象的wakeUp()方法, 即使没有channel准备好, 依然会立即返回. 因此, 若要决断是否有channel准备好, 还应该判断select()返回的int数值是否为0\n",
     "6. `close()`\n",
@@ -155,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
