--- a/Interview/分布式缓存/Untitled.ipynb
+++ b/Interview/分布式缓存/Untitled.ipynb
@@ -25,7 +25,14 @@
     "   redis支持的数据类型比memcached更多，更能支持复杂应用     \n",
     "   memcached没有原声的分布式集群， 需要客户端进行分片后再写；redis原生支持cluster模式 \n",
     "2. **redis的线程模型？**   \n",
-    "    1. 文件时间处理器。 io多路复用， 同时监控多个socket\n"
+    "    1. redis基于io多路复用的网络模型进行IO, 使用一个叫做\"文件事件处理器\"的东西处理接受连接,可读,可写,关闭事件:  \n",
+    "       即可理解为serversocketChannel注册了4种状态的selectionkey, 用selector轮询检查\n",
+    "        * key.isReadable()\n",
+    "        * key.isWriteable()\n",
+    "        * key.isAccept()\n",
+    "        * key.isClose()\n",
+    "    2. 上面注册的4种状态的socket会被放入对应的四种队列中, selector选择一种状态的socket后, 文件事件处理器的4个不同部分会做出处理, 由于文件事件处理器是单线程的, 即处理完1个socket才能处理下一个socket, 所以redis是单线程的  \n",
+    "    "
    ]
   },
   {
