--- a/Java NetWork/1-Linux5种IO模型.ipynb
+++ b/Java NetWork/1-Linux5种IO模型.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "#### 二. 几个概念\n",
     "1. 用户空间和内核空间  \n",
-    "现代操作系统使用虚拟存储器([软硬件接口/5-存储器层级结构/5.7-虚拟存储器]()), 虚拟内存将主存划分为内核空间和用户空间\n",
+    "现代操作系统使用虚拟存储器([软硬件接口/5-存储器层级结构/5.7-虚拟存储器](https://nbviewer.jupyter.org/github/lj72808up/JavaFeatures/blob/master/%E8%AE%A1%E7%AE%97%E6%9C%BA%E8%BD%AF%E7%A1%AC%E4%BB%B6%E6%8E%A5%E5%8F%A3/5-%E5%AD%98%E5%82%A8%E5%99%A8%E7%9A%84%E5%B1%82%E6%AC%A1%E7%BB%93%E6%9E%84/5.7-%E8%99%9A%E6%8B%9F%E5%AD%98%E5%82%A8%E5%99%A8.ipynb)), 虚拟内存将主存划分为内核空间和用户空间\n",
     "\n",
     "\n",
     "2. Linux IO模型  \n",
@@ -74,6 +74,14 @@
     "    3. 用户进程在select调用返回后变成就绪状态, 调用recvFrom调用, 将数据从内核空间拷贝到用户空间\n",
     "    \n",
     " &nbsp;&nbsp;&nbsp;&nbsp;IO多路复用主要解决服务器同时存在大量连接的情况, 是单线程处理多连接的模型; 与传统的多线程处理多连接, 一方面减小了多线程的开销, 另一面避免场链接带来的长时间阻塞问题  \n",
+    " \n",
+    " &nbsp;&nbsp;&nbsp;&nbsp;上面提到的select和epoll主要有以下几个区别:\n",
+    "     1. select的文件句柄数受限制, 最多能监听1024个fd, 即同时轮训1024个连接, 而epoll的fd个数没有限制  \n",
+    "     2. select采用轮训, fd形成一个类似数组的结构.   \n",
+    "        而epoll采用队列的数据结构, 对于是否有fd可读或可写, 直接查看对应的队列是否为空即可. 这是因为epoll只会对\"活跃\"的socket进行操作, 每个fd上配置一个回调函数, 只有fd可读或可写时才会出发回调函数(将自己加入相应的队列中), 其他idle状态句柄则不会，在这点上，epoll实现了一个\"伪\"AIO\n",
+    "     3. epool使用mmap加速内核与用户空间的消息传递。  \n",
+    "       无论是select,poll还是epoll都需要内核把FD消息通知给用户空间，如何避免不必要的内存拷贝就很重要，在这点上，epoll是通过内核于用户空间mmap同一块内存实现的。\n",
+    "     \n",
     "    ```\n",
     "    第一个阶段(socket->内核空间)可以阻塞又可以不阻塞。(根据poll,select, epoll的不同而不同)\n",
     "    第二个阶段(内核空间->用户空间)是阻塞的。\n",
@@ -93,6 +101,62 @@
     "\n",
     "#### 几种IO之间的区别\n",
     "<img src=\"img/21095604_vhHX.png\" width=\"70%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 四. Zero Copy\n",
+    "1. **通过`FileChannel`的`transfer`实现内核态和用户态之间的零拷贝**    \n",
+    "   虚拟存储技术的出现,内存划分为了内核空间和用户空间, 所有IO设备中的数据都要先复制到内核空间, 再有内核空间复制到用户空间后才能使用. 如果要在两个IO设备之间传输数据, 且其中至少有一个IO源是磁盘上的文件, 则可以使用`FileChannel`的`transferTo`或`transferFrom`, 让数据直接在内存空间上流转, 而不用经过用户空间产生多余的拷贝\n",
+    "  \n",
+    "    1. `transferFrom()`  \n",
+    "    如下打开两个文件channel,把数据从一个文件写入到另一个文件.\n",
+    "        * 下面的position和count用来描述源文件.\n",
+    "        * position: 从toChannel的哪个位置开始写\n",
+    "        * count: 从fromChannel中读多少数据写入 \n",
+    "        * 如果FileChannel的transferFrom是SocketChannel,且将socket设置为非阻塞模式, 那么当调用transferFrom()方法时, 会立刻把数据从socket的缓冲区中读取出来; 即便读取的大小没到count指定的大小, 且后续仍会有数据从socket中来, 也不能再次写入到FileChannel中\n",
+    "         <img src=\"img/transforfrom.png\" width=\"70%\">\n",
+    "\n",
+    "    2. `transferTo()`   \n",
+    "     同上述功能一样, 将数据从fromChannel拷贝到toChannel\n",
+    "        * position: 从fromChannel的那个位置开始读\n",
+    "        * count: 从fromChannel中读多少数据\n",
+    "        * 如果fromChannel是SocketChannel,且将socket设置为非阻塞模式,一样会存在transferFrom的问题: 立刻读取, 且后续即使有数据到来也不能继续读取\n",
+    "        <img src=\"img/transforto.png\" width=\"70%\">\n",
+    "        \n",
+    "        \n",
+    "2. **传统的数据传输方式**  \n",
+    "  像这种从文件读取数据然后将数据通过网络传输给其他的程序的方式其核心操作就是如下两个调用：\n",
+    "```java\n",
+    "File.read(fileDesc,buf,len);\n",
+    "Socket.send(socket,buf,len);\n",
+    "```\n",
+    "其上操作看上去只有两个简单的调用，但是其内部过程却要经历四次用户态和内核态的切换以及四次的数据复制操作：\n",
+    "<img src=\"img/transfor3.png\" width=\"60%\">  \n",
+    "上图展示了数据从文件到socket的内部流程。   \n",
+    "下面看下用户态和内核态的切换过程：   \n",
+    "<img src=\"img/trans5.png\" width=\"70%\">  \n",
+    "步骤如下：\n",
+    "    1. read()的调用引起了从用户态到内核态的切换（看图二），内部是通过sys_read()（或者类似的方法）发起对文件数据的读取。数据的第一次复制是通过DMA（直接内存访问）将磁盘上的数据复制到内核空间的缓冲区中；\n",
+    "    2. 数据从内核空间的缓冲区复制到用户空间的缓冲区后，read()方法也就返回了。此时内核态又切换回用户态，现在数据也已经复制到了用户地址空间的缓存中；\n",
+    "    3. socket的send()方法的调用又会引起用户态到内核的切换，第三次数据复制又将数据从用户空间缓冲区复制到了内核空间的缓冲区，这次数据被放在了不同于之前的内核缓冲区中，这个缓冲区与数据将要被传输到的socket关联；\n",
+    "    4. send()系统调用返回后，就产生了第四次用户态和内核态的切换。随着DMA单独异步的将数据从内核态的缓冲区中传输到协议引擎发送到网络上，有了第四次数据复制。\n",
+    "\n",
+    "\n",
+    "3. **zero copy的数据传输方式**  \n",
+    "下图展示了通过transferTo实现数据传输的路径：\n",
+    "<img src=\"img/trans1.png\" width=\"50%\">  \n",
+    "下图展示了内核态、用户态的切换情况：\n",
+    "<img src=\"img/trans2.png\" width=\"60%\">  \n",
+    "使用transferTo()方式所经历的步骤：\n",
+    "    1. transferTo调用会引起DMA将文件内容复制到读缓冲区(内核空间的缓冲区)，然后数据从这个缓冲区复制到另一个与socket输出相关的内核缓冲区中； \n",
+    "    2. 第三次数据复制就是DMA把socket关联的缓冲区中的数据复制到协议引擎上发送到网络上。  \n",
+    "    \n",
+    "  这次改善，我们是通过将内核、用户态切换的次数从四次减少到两次，将数据的复制次数从四次减少到三次(只有一次用到cpu资源)。但这并没有达到我们零复制的目标。如果底层网络适配器支持收集操作的话，我们可以进一步减少内核对数据的复制次数。在内核为2.4或者以上版本的linux系统上，socket缓冲区描述符将被用来满足这个需求。这个方式不仅减少了内核用户态间的切换，而且也省去了那次需要cpu参与的复制过程。从用户角度来看依旧是调用transferTo()方法，但是其本质发生了变化：\n",
+    "    1. 调用transferTo方法后数据被DMA从文件复制到了内核的一个缓冲区中；\n",
+    "    2. 数据不再被复制到socket关联的缓冲区中了，仅仅是将一个描述符（包含了数据的位置和长度等信息）追加到socket关联的缓冲区中。DMA直接将内核中的缓冲区中的数据传输给协议引擎，消除了仅剩的一次需要cpu周期的数据复制。"
    ]
   }
  ],
