--- a/Java NetWork/2.7 Non-blocking Sever.ipynb
+++ b/Java NetWork/2.7 Non-blocking Sever.ipynb
@@ -78,7 +78,10 @@
     "    1. 当有数据写到`Message Writer`后, 把`channel`的`写SelectionKey`注册到`selector`  \n",
     "    2. `Selector`发现`channel`可写后返回, `Message Writer`将数据写回`channel`, 当所有的消息都被完整写回后将`channel`的`写SelectionKey`从`selector`中解除绑定  \n",
     "    \n",
-    "   如上两步, 就能保证只有有数据待写回的`channel`才会被注册到`selector`上  "
+    "   如上两步, 就能保证只有有数据待写回的`channel`才会被注册到`selector`上  \n",
+    "   \n",
+    "### 三. NIO的劣势\n",
+    "1. 使用NIO!=高性能, 只有在连接大于1000时, NIO的多端口轮训,单线程处理模型才能发挥作用; 连接数少且都是短连接的情况下, 传统IO的多线程模型性能更高"
    ]
   }
  ],
