--- a/Interview/分布式缓存/redis相关.ipynb
+++ b/Interview/分布式缓存/redis相关.ipynb
@@ -32,7 +32,10 @@
     "        * key.isAccept()\n",
     "        * key.isClose()\n",
     "    2. 上面注册的4种状态的socket会被放入对应的四种队列中, selector选择一种状态的socket后, 文件事件处理器的4个不同部分会做出处理, 由于文件事件处理器是单线程的, 即处理完1个socket才能处理下一个socket, 所以redis是单线程的  \n",
-    "    "
+    "    \n",
+    "#### 四. redis有哪些数据类型, 有哪些应用场景\n",
+    "(面向初级开发者)  \n",
+    "1. "
    ]
   },
   {
