--- a/GC/Java Diagnostic Tools/1-jcmd.ipynb
+++ b/GC/Java Diagnostic Tools/1-jcmd.ipynb
@@ -175,24 +175,27 @@
     "    ```\n",
     "    \n",
     "5. 使用jcmd记录jfr\n",
-    "    * 开启jfr  \n",
-    "    * 检查jfr是否记录完毕\n",
+    "    1. 开启jfr  \n",
+    "    ``` jcmd 8064 VM.unlock_commercial_features ```\n",
+    "    2. 检查jfr是否记录完毕\n",
     "    如下持续记录jvm2分钟的飞行记录\n",
-    "    ```jcmd\n",
+    "    ```bash\n",
     "    > jcmd 3492 JFR.start name=myrecording delay=20s duration=2m filename=myrecording.jfr\n",
     "    3492:\n",
     "    Recording 2 scheduled to start in 20 s. The result will be written to:\n",
     "\n",
     "    /home/work/liujie32/test_jar/myrecording.jfr\n",
+    "    \n",
+    "    # 查看jfr进度\n",
     "    > jcmd 3492 JFR.check\n",
     "    3492:\n",
     "    Recording: recording=1 name=\"MyRecording\" duration=2m filename=\"myrecording.jfr\" compress=false (stopped)\n",
     "\n",
     "    Recording: recording=2 name=\"myrecording\" duration=2m filename=\"myrecording.jfr\" compress=false (stopped)\n",
     "    ```\n",
-    "    * 立即创建一个jfr dump  \n",
+    "    3. 立即创建一个jfr dump  \n",
     "    这回停止相同name的jfr行为, 并将jfr立刻dump到指定文件\n",
-    "    ```jcmd\n",
+    "    ```bash\n",
     "    > jcmd 3492 JFR.dump name=myrecording filename=myrecording2.jfr\n",
     "    3492:\n",
     "    Dumped recording \"myrecording\", 206.7 kB written to:\n",
@@ -201,6 +204,13 @@
     "    ```\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
