--- a/Interview/分布式缓存/redis面试题.ipynb
+++ b/Interview/分布式缓存/redis面试题.ipynb
@@ -35,7 +35,39 @@
     "    \n",
     "#### 四. redis有哪些数据类型, 有哪些应用场景\n",
     "(面向初级开发者)  \n",
-    "1. "
+    "* string\n",
+    "* list\n",
+    "* set\n",
+    "* zset : sortedset, 相当于map结构, 但是对每个value赋予一个score权重, 同一个key, 不同的value不会被覆盖, 而是按照score排序存储\n",
+    "\n",
+    "#### 五. 如何实现redis的过期策略\n",
+    "1. redis中的数据会丢失?  \n",
+    "  redis是一个缓存, 而不是一个数据库, 既然是缓存, 当数据超过内存限制, 自然会丢弃一些过期数据\n",
+    "  \n",
+    "2. 对某个key设置过期时间后, 数据在这个时间后仍然存在?  \n",
+    "    1. 这涉及到redis的一个内部逻辑, 如何删除那些设置了过期时间的key?      \n",
+    "    采用2种删除方式, 定期删除+惰性删除  \n",
+    "        * 定期删除: redis每隔100ms, 从所有设置超时时间的key中抽样一部分进行检查, 删除过期的kv对.(抽样检查的目的是, redis中可能存在大量设置过期时间的key, 如果全部检查会导致cpu负载全部花在检查上了)\n",
+    "        * 惰性删除: 当查询1个key时, 如果redis发现设置了过期时间且已经过期, 则会删除这个key并返回空\n",
+    "        \n",
+    "    2. 如上删除策略, 如果一些key既没有被定期删除采样到, 也没有在一段时间内继续访问, 那该如何删除呢?    \n",
+    "    这部分数据会在内存淘汰机制中被删除, 内存淘汰机制主要有以下几种(一般都是使用allkeys-lru机制)\n",
+    "        * allkeys-lru : 对所有key进行LRU\n",
+    "        * volatile-lru : 只对设置了过期时间的key进行lru, 淘汰最近最久未被使用的\n",
+    "        * noevication : 内存慢了以后在插入数据直接报错\n",
+    "        * allkeys-rendom : 选择一个key随机删除   \n",
+    "    \n",
+    "    以上需要在 redis.conf中配置最大内存使用大小, 然后配置内存淘汰策略   \n",
+    "    3. 如何实现一个LRU缓存(双向链表+HashTable)\n",
+    "\n",
+    "#### 六. 生产环境下, redis如何实现高并发高可用机制?\n",
+    "1. redis如何承载高并发? 实现每秒10万+的QPS (master-slave读写分离结构)?  \n",
+    "    1. 单节点的redis, qps一般在1万左右, 想承载10万qps.必须上redis的读写分离模式  \n",
+    "    2. qps是每秒处理的查询数量, 就表示这是一个读多写少的场景, 也正是缓存应用的场景; 如果是写多读少, 就无法使用分布式缓存了, 需要使用一些列复杂的异步消息队列实现. \n",
+    "    3. redis的读写分离是这样的, 使用单个master节点负责写, master会向slave节点异步同步数据,其余slave节点负责读; 这种架构的好处在于, 对于处理读请求的slave节点可以水平扩容来满足qps; \n",
+    "    <img src=\"img/redis1.png\" width=\"60%\">\n",
+    "    4. redis的master-slave架构实际上是一种replication机制, 只是可以用这种架构实现读写分离. master-slave架构的核心机制 :  \n",
+    "        1. 一个"
    ]
   },
   {
