--- a/GC/Java Diagnostic Tools/1-jcmd.ipynb
+++ b/GC/Java Diagnostic Tools/1-jcmd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 二. jcmd\n",
+    "###  jcmd命令使用\n",
     "1. jcmd用于发送诊断命令请求到jvm, 这些请求能控制控制产生java飞行记录(java flight recording),诊断jvm和java应用;  \n",
     "  jcmd需要使用和被诊断的java应用在同一台机器, 使用相同的用户名和组名\n",
     "\n",
@@ -204,13 +204,6 @@
     "    ```\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
