--- a/GC/深入理解Java虚拟机/4-jvm监控与诊断工具.ipynb
+++ b/GC/深入理解Java虚拟机/4-jvm监控与诊断工具.ipynb
@@ -54,7 +54,7 @@
     "    3. 期间可以查看JFR是否记录完毕 ```jcmd 8064 JFR.check```  \n",
     "    \n",
     "   <img src=\"img/jfr2.png\"> \n",
-    "   发现JFR的日志包含的信息比jmap dump出来的要多, 不只是堆内存的分配, 还包括了[\"热点代码跟踪\",\"线程状态dump\",\"这段时间发生的gc情况, gc时最大的对象是什么, 跟踪调用链查看这个对象是哪个代码生成的\", \"异常信息\"]()等\n",
+    "   发现JFR的日志包含的信息比jmap dump出来的要多, 不只是堆内存的分配, 还包括了[\"热点代码跟踪\",\"线程状态dump\",\"这段时间发生的gc情况, gc时最大的对象是什么, 跟踪调用链查看这个对象是哪个代码生成的\", \"异常信息\"](https://nbviewer.jupyter.org/github/lj72808up/JavaFeatures/blob/master/GC/Java%20Diagnostic%20Tools/2-%E4%BD%BF%E7%94%A8jmc%E5%88%86%E6%9E%90jfr.ipynb)等\n",
     "    \n",
     "#### 4. jstack"
    ]
